--- a/css/main.css
+++ b/css/main.css
@@ -65,11 +65,14 @@
     line-height: 22px;
     letter-spacing: -0.303571px;
     color: #FFFFFF;
+    background-image: url(../images/bg.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .container
   {
     width: 100%;
-    max-width: 1210px;
+    max-width: 1230px;
     padding-left: 5rem;
     padding-right: 5rem;
     margin: 0 auto;
@@ -130,11 +133,11 @@
   }
 .rated__box:nth-child(2)
 {
-    margin-left: 4.3rem;
+    margin-left: 5rem;
 }
 .rated__box:nth-child(3)
 {
-    margin-left: 8.3rem;
+    margin-left: 10rem;
 }
 .features {
     padding-top: 3.1rem;
